# ML-Project

./: pyproject.toml
Capstone/Group_14_Deloitte/: 2_feature_engineering.ipynb  Sociodemographic.xlsx  customer_economics.xlsx  customer_info.xlsx
Datasets/: thyroid_lab.csv
Telco Customer Churn Prediction using Machine Learning/: Telco_Churn_Prediction.html  Telco_Churn_Prediction.ipynb  churn_all.csv  top_500_pot_churn_customers.csv
