[tool.poetry]
name = "ml projects "
version = "0.1.0"
description = ""
authors = ["moseskortu <moses.kortu@student.ie.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
ruff = "^0.1.15"
scikit-learn = "^1.4.0"
jupyter = "^1.0.0"
lxml = "^5.1.0"
imbalanced-learn = "^0.12.0"
nltk = "^3.8.1"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
